[package]
name = "glowsquid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = { version = "0.5.0-rc.2", features = ["macros", "libadwaita"] }
relm4-components = "0.5.0-rc.2"
tokio = { version = "1.25.0", features = ["full"] }
